--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 Flask==2.2.3
 pyodbc==4.0.35
 pymongo==4.3.3
-factory_boy==4.3.1
+factory_boy==2.9.2
 python-dotenv==0.21.1
+werkzeug==2.2.2
+flask-session==0.4.0
+Pillow==8.4.0 
+
