--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,17 +27,65 @@ services:
     networks:
       - app-network
 
-  app:
+  app1:
     build: .
-    container_name: app
+    container_name: app1
+    expose:
+      - "5000"  # Exponer internamente el puerto 5000
     ports:
-      - "5000:5000"
+      - "5001:5000"  # Mapear 5001 de tu host a 5000 del contenedor
     depends_on:
       - mongodb
       - sqlserver
     environment:
       - FLASK_APP=app.py
       - FLASK_ENV=development
+    networks:
+      - app-network
+
+  app2:
+    build: .
+    container_name: app2
+    expose:
+      - "5000"  
+    ports:
+      - "5002:5000"
+    depends_on:
+      - mongodb
+      - sqlserver
+    environment:
+      - FLASK_APP=app.py
+      - FLASK_ENV=development
+    networks:
+      - app-network
+
+  app3:
+    build: .
+    container_name: app3
+    expose:
+      - "5000"
+    ports:
+      - "5003:5000"
+    depends_on:
+      - mongodb
+      - sqlserver
+    environment:
+      - FLASK_APP=app.py
+      - FLASK_ENV=development
+    networks:
+      - app-network
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    ports:
+      - "5000:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - app1
+      - app2
+      - app3
     networks:
       - app-network
 
