--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,6 +82,7 @@ services:
       - "5000:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./logs:/var/log/nginx  # << Montar los logs en la carpeta local ./logs
     depends_on:
       - app1
       - app2
