--- a/nginx.conf
+++ b/nginx.conf
@@ -4,9 +4,10 @@ http {
     log_format custom '$remote_addr - $remote_user [$time_local] "$request" '
                         '$status $body_bytes_sent "$http_referer" '
                         '"$http_user_agent" "$http_x_forwarded_for" '
-                        'backend=$upstream_addr request_time=$request_time';
+                        'backend=$upstream_addr ($hostname) request_time=$request_time';
 
-    access_log /var/log/nginx/custom_access.log;
+
+    access_log /var/log/nginx/custom_access.log custom;
 
 
     upstream flask_backend_round_robin {
